Versao de produção

--- a/Da Hora/Da Hora-Info.plist
+++ b/Da Hora/Da Hora-Info.plist
@@ -22,17 +22,21 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHumanReadableCopyright</key>
+	<string>© 2014 - Alexandre Prates.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>dripicons.ttf</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
-	</array>
-	<key>UIAppFonts</key>
-	<array>
-		<string>dripicons.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
